# formiclimate

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  Ravedude.toml  build.rs
src/: codegen.rs  control.rs  display.rs  encoder.rs  main.rs  millis.rs  ntc.rs  pwm.rs  relay.rs  rtc.rs  sens.rs  utils.rs
